Aggiunto spazio tra i testi e bottoni ingranditi

--- a/src/styles/components/earthquake.scss
+++ b/src/styles/components/earthquake.scss
@@ -13,3 +13,17 @@
 #map {
   height: 500px;
 }
+
+#button{
+  width: 256px;
+  height: 64px;
+  font-size: 16px;
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+#textDescription{
+  font-size: 18px;
+  text-align: center;
+  margin-top: 45px;
+}
