--- a/src/styles/components/home.css
+++ b/src/styles/components/home.css
@@ -17,7 +17,7 @@
 }
 #navList {
     width: 20%;
-    background: #3f51b5;
+    background: #94a89a;
     padding-bottom: 15px;
 }
 
@@ -35,11 +35,11 @@
 }
 
 .PBWrapper {
-    width: 35%;
+    width: 40%;
 }
 
 .donationContent {
-    width: 65%;
+    width: 60%;
 }
 
 .Wrapper {
