--- a/src/styles/components/earthquake.scss
+++ b/src/styles/components/earthquake.scss
@@ -20,10 +20,16 @@
   font-size: 16px;
   margin-top: 50px;
   margin-bottom: 50px;
+  background-color: #E53935;
+  color: white;
 }
 
 #textDescription{
   font-size: 18px;
   text-align: center;
   margin-top: 45px;
+}
+
+.content{
+  background-color: #FFEBEE;
 }
