--- a/src/styles/components/home.css
+++ b/src/styles/components/home.css
@@ -17,13 +17,13 @@
 }
 #navList {
     width: 20%;
-    background: #94a89a;
+    background: #e53935;
     padding-bottom: 15px;
 }
 
 #content {
     width: 80%;
-    background: #344283;
+    background: #ffcdd2;
     padding-bottom: 15px;
 }
 
