--- a/src/styles/components/gamepage.scss
+++ b/src/styles/components/gamepage.scss
@@ -4,7 +4,7 @@
 }
 
 #box-1 {
-  height: 200px;
+  height: 350px;
   width: 80%;
   margin: 0 auto;
   border-radius: 30px;
@@ -12,9 +12,9 @@
 
 #gameContent {
   padding-top: 25px;
-  background: #344283;
+  background: #ffcdd2;
   width: 100%;
-  height: 500px;
+  height: 600px;
   margin-top: 0px;
 }
 
